fix footer spacing and color

--- a/assets/css/nycaasc-custom.css
+++ b/assets/css/nycaasc-custom.css
@@ -176,6 +176,8 @@
   width: 100%;
   /* Set the fixed height of the footer here
   height: 60px;*/
+}
+.footer>div {
   background-color: #f5f5f5;
   color: #727272;
   padding: 20px;
